# raylib-scripting

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui_impl.cpp  imgui_impl.h  index.html  index.md  main.cpp  raylib_test.js  raylib_test.wasm
assets/: default_level.lua  lit.fs  lit.vs  transparent.fs
assets/levels/: 1 - Turning Point.lua  2 - Roundabout.lua  Fork and join.lua  Roundabout.lua  Turning Point.lua  level1.lua  level2.lua  test.lua
assets/lua/: editor.lua  entity_tools.lua  gui.lua  level.lua  main.lua  menu.lua  navigation_tools.lua  navigation_tools_dijkstras.lua  play.lua  utils.lua
assets/lua/behaviour/: test.lua
assets/lua/editor/: editor.lua  entity_window.lua  main_menu_bar.lua
assets/lua/gui/: entity_window.lua  main_menu_bar.lua
assets/lua/play/: common.lua  play.lua
assets/lua/play/behaviour/: level1.lua  level2.lua  test.lua
assets/ruins/: Arch_Gothic.mtl  Arch_Gothic_RoundColumn.mtl  Arch_Round.mtl  Arch_Round_RoundColumn.mtl  Arrow.mtl  Barrel.mtl  BearTrap_Closed.mtl  BearTrap_Open.mtl  Bookcase_Empty.mtl  Bookcase_Full.mtl  Brick.mtl  Bricks.mtl  BridgeSection.mtl  Bush_1x1.mtl  Bush_2x1.mtl  Bush_2x2.mtl  Bush_Large.mtl  Bush_Round.mtl  Candles_1.mtl  Candles_2.mtl  Cart.mtl  Chest.mtl  Chest_Gold.mtl  Column_BridgeSupport.mtl  Column_Round.mtl  Column_Round_Short.mtl  Column_Square.mtl  Crate.mtl  Curve_1.mtl  Curve_1_Overgrown.mtl  Curve_2.mtl  Curve_2_Overgrown.mtl  Dart.mtl  DeadTree_1.mtl  DeadTree_2.mtl  DeadTree_3.mtl  Doors_GothicArch.mtl  Doors_GothicArch_Covered.mtl  Doors_RoundArch.mtl  Doors_RoundArch_Covered.mtl  (+54 more)
assets/shaders/: lit.fs  lit.vs  lit_21.fs  lit_21.vs  lit_33.fs  lit_33.vs  lit_es2.fs  lit_es2.vs
libs/: CMakeLists.txt
libs/raygui-custom/: LICENSE  README.md  raygui.h
libs/raylib/src/: CMakeLists.txt  Makefile  config.h  rcamera.h
src/: assets.cpp  assets.hpp  camera.cpp  camera.hpp  imgui_error_check.cpp  imgui_error_check.hpp  imgui_impl.cpp  imgui_internal.hpp  lua_entt_impl.cpp  lua_entt_impl.hpp  lua_imgui_impl.hpp  lua_register.hpp  main.cpp  navigation.cpp  navigation.hpp  profiling.cpp  profiling.hpp  raylib_imgui.cpp  raylib_imgui.hpp  world.cpp  world.hpp
src/component/: area_tracker.hpp  behaviour.hpp  camera.hpp  enemy_goal.hpp  health.hpp  walkable.hpp
src/entity/: acceleration.hpp  area_tracker.hpp  enemy_goal.hpp  enemy_spawn.hpp  max_range.hpp  move_towards.hpp  nav_gate.hpp  obstacle.hpp  position.hpp  projectile.hpp  render.hpp  tile.hpp  transform.hpp  velocity.hpp  walkable.hpp  watcher.hpp
src/entity_reflection/: entity_reflection.hpp  include_reflection.cpp  reflection_acceleration.hpp  reflection_area_tracker.hpp  reflection_behaviour.hpp  reflection_camera.hpp  reflection_enemy_goal.hpp  reflection_enemy_spawn.hpp  reflection_entity.hpp  reflection_health.hpp  reflection_max_range.hpp  reflection_move_towards.hpp  reflection_nav_gate.hpp  reflection_obstacle.hpp  reflection_projectile.hpp  reflection_render.hpp  reflection_tile.hpp  reflection_transform.hpp  reflection_velocity.hpp  reflection_walkable.hpp  reflection_watcher.hpp
src/imgui/: imgui_impl.cpp  imgui_impl.h  imgui_internal.cpp  imgui_internal.hpp
src/imgui/imgui_entity/: entity_reflection.hpp  imgui_entity.hpp  imgui_render.hpp  imgui_transform.hpp  imgui_velocity.hpp
src/lua/: lua_asset_impl.cpp  lua_asset_impl.hpp  lua_entity_reflection_impl.cpp  lua_entity_reflection_impl.hpp  lua_entt_impl.cpp  lua_entt_impl.hpp  lua_imgui_impl.cpp  lua_imgui_impl.hpp  lua_imguizmo_impl.cpp  lua_imguizmo_impl.hpp  lua_raylib_impl.cpp  lua_raylib_impl.hpp  lua_register.hpp  lua_register_types.hpp  lua_validator.hpp
src/lua_impl/: lua_asset_impl.cpp  lua_entity_reflection_impl.cpp  lua_entt_impl.cpp  lua_entt_impl.hpp  lua_imgui_impl.cpp  lua_imgui_impl.hpp  lua_imguizmo_impl.cpp  lua_raylib_impl.cpp  lua_raylib_impl.hpp  lua_register.hpp  lua_register_types.hpp  lua_validator.hpp  lua_world_impl.cpp  lua_world_impl.hpp
src/system/: align_tiles.hpp  area_tracker.hpp  avoid_entities.hpp  avoid_obstacles.hpp  calculate_velocity.hpp  check_health.hpp  draw_renderables.hpp  max_range.hpp  move_entities.hpp  navigate.hpp  update_projectiles.hpp
